samples/_failures_safe/1761218850_b63a5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_283369c6.c: In function ‘main’:
./samples/SAFE/__tmp_283369c6.c:156:5: error: expected declaration or statement at end of input
  156 |     } else {
      |     ^
./samples/SAFE/__tmp_283369c6.c:156:5: error: expected declaration or statement at end of input
